--- a/docs/versioned_docs/version-1.16.0/api/components/keyboard-avoiding-view.mdx
+++ b/docs/versioned_docs/version-1.16.0/api/components/keyboard-avoiding-view.mdx
@@ -114,29 +114,13 @@ Inherits [View Props](https://reactnative.dev/docs/view#props).
 
 Specify how to react to the presence of the keyboard. Could be one value of:
 
-- `translate-with-padding`
+- `translate-with-padding` - Combines **translation** (moves the view up) with **paddingTop** that gets applied only once per animation. As a result this mode delivers **the best** possible performance. An ideal fit for building **chat-like** apps.
 
-:::info
-Combines **translation** (moves the view up) with **paddingTop** that gets applied only once per animation. As a result this mode delivers **the best** possible performance. An ideal fit for building _chat-like_ apps.
-:::
+- `padding` - the most commonly used mode. It moves the view up by the height of the keyboard and applies `paddingBottom` to the content container. Use `padding` mode when you have a `ScrollView` or `flex-based` layouts that should remain visible.
 
-- `padding`
+- `height` - use this when you want to shrink the entire view rather than moving specific elements.
 
-:::info
-The most commonly used mode. It moves the view up by the height of the keyboard and applies `paddingBottom` to the content container. Use `padding` mode when you have a `ScrollView` or `flex-based` layouts that should remain visible.
-:::
-
-- `position`
-
-:::info
-Use it when the view needs to shift up instead of resizing. For example when you have a fixed button at the bottom (also be sure that you checked out [KeyboardStickyView](./keyboard-sticky-view) component).
-:::
-
-- `height`
-
-:::note
-Use this when you want to shrink the entire view rather than moving specific elements. Use cautiously, only if `padding`/`position` don’t work.
-:::
+- `position` - use it when the view needs to shift up instead of resizing. For example when you have a fixed button at the bottom (also be sure that you checked out [KeyboardStickyView](./keyboard-sticky-view) component).
 
 ### `contentContainerStyle`
 
