--- a/docs/docs/installation.mdx
+++ b/docs/docs/installation.mdx
@@ -64,6 +64,7 @@ This package supports [autolinking](https://github.com/react-native-community/cl
 
 After adding the package don't forget to **re-install** `pods` and **re-assemble** `android` and `ios` applications, since this library contains native code.
 
+If you still experience issues like **package doesn't seem to be linked** try performing a [fresh build](https://github.com/kirillzyusko/react-native-keyboard-controller/issues/786#issuecomment-2741464142) to clear any outdated cache.
 :::
 
 ## Adding provider
