--- a/docs/versioned_docs/version-1.16.0/api/components/keyboard-avoiding-view.mdx
+++ b/docs/versioned_docs/version-1.16.0/api/components/keyboard-avoiding-view.mdx
@@ -133,3 +133,7 @@ A boolean prop indicating whether `KeyboardAvoidingView` is enabled or disabled.
 ### `keyboardVerticalOffset`
 
 This is the distance between the top of the user screen and the react native view, may be non-zero in some use cases. Default is `0`.
+
+import KeyboardVerticalOffset from "@site/src/components/KeyboardVerticalOffset";
+
+<KeyboardVerticalOffset />
