feat: example project

--- a/docs/docs/api/hooks/keyboard/use-keyboard-state.mdx
+++ b/docs/docs/api/hooks/keyboard/use-keyboard-state.mdx
@@ -19,7 +19,7 @@ Use this hook only when you need to control `props` of views returned in JSX-mar
 <Button
   onPress={() => {
     const state = KeyboardController.state();
-    if (state?.isVisible) {
+    if (state.isVisible) {
       // ...
     }
   }}
