feat: continue experiments

--- a/docs/docs/api/keyboard-extender/index.mdx
+++ b/docs/docs/api/keyboard-extender/index.mdx
@@ -15,7 +15,7 @@ keywords:
 
 # Keyboard Extender
 
-!!PUT LOTTIE HERE!!
+<!-- PUT LOTTIE HERE -->
 
 The `KeyboardExtend` component allows you to extend the keyboard with your own UI that extends the keyboard (i. e. literally increasing its height) moves and matches its appearance.
 
@@ -28,6 +28,7 @@ While both components serve similar purposes they are intended for different use
 | Matches keyboard design       | ✅               | ❌                 |
 | Is part of the keyboard       | ✅               | ❌                 |
 | Hides when keyboard is hidden | ✅               | ❌                 |
+| Increases keyboard height     | ✅               | ❌                 |
 
 ## Features
 
@@ -102,3 +103,7 @@ const styles = StyleSheet.create({
   },
 });
 ```
+
+## Limitations
+
+- You can not put `TextInput` inside <!-- VERIFY -->
