docs: update position

--- a/docs/docs/guides/components-overview.mdx
+++ b/docs/docs/guides/components-overview.mdx
@@ -1,4 +1,25 @@
-# Component Quick Guide
+---
+sidebar_position: 3
+description: Overview and comparison of view and components available in this package
+keywords:
+  [
+    react-native-keyboard-controller,
+    components,
+    views,
+    over keyboard view,
+    keyboard toolbar,
+    keyboard avoiding view,
+    keyboard sticky view,
+    keyboard aware scroll view,
+    KeyboardAvoidingView,
+    KeyboardStickyView,
+    KeyboardAwareScrollView,
+    KeyboardToolbar,
+    OverKeyboardView,
+  ]
+---
+
+# Components Overview
 
 This guide provides a concise overview of the main UI components in `react-native-keyboard-controller`. Choose the right component to handle keyboard interactions smoothly and consistently across platforms.
 
