docs: added draft lottie

--- a/docs/docs/guides/components-overview.mdx
+++ b/docs/docs/guides/components-overview.mdx
@@ -33,6 +33,7 @@ import KeyboardAwareScrollView from "@site/src/components/HomepageFeatures/text-
 import KeyboardStickyView from "../api/components/keyboard-sticky-view/ksv.lottie.json";
 import KeyboardToolbar from "../api/components/keyboard-toolbar/toolbar.lottie.json";
 import OverKeyboardView from "../api/over-keyboard-view/over-keyboard-view.lottie.json";
+import KeyboardBackgroundView from "../api/keyboard-background-view/keyboard-background-view.lottie.json";
 
 <div style={{ display: "flex", justifyContent: "center", marginBottom: 20 }}>
   <Lottie
@@ -124,7 +125,7 @@ Its key difference from a standard `Modal` is precisely this ability to keep the
 <div style={{ display: "flex", justifyContent: "center", marginBottom: 20 }}>
   <Lottie
     className="lottie"
-    animationData={OverKeyboardView}
+    animationData={KeyboardBackgroundView}
     style={{ width: 400, height: 400 }}
     loop
   />
