--- a/docs/docs/api/keyboard-background-view/index.mdx
+++ b/docs/docs/api/keyboard-background-view/index.mdx
@@ -8,7 +8,7 @@ keywords:
 # KeyboardBackgroundView
 
 import Lottie from "lottie-react";
-import lottie from "../over-keyboard-view/over-keyboard-view.lottie.json";
+import lottie from "./keyboard-background-view.lottie.json";
 
 <div style={{ display: "flex", justifyContent: "center", marginBottom: 20 }}>
   <Lottie
