--- a/docs/docs/api/keyboard-background-view/index.mdx
+++ b/docs/docs/api/keyboard-background-view/index.mdx
@@ -19,17 +19,49 @@ import lottie from "./keyboard-background-view.lottie.json";
   />
 </div>
 
-`KeyboardBackgroundView` is designed to match the background color of the keyboard. Using this low-level component you can design various keyboard extensions, implement "shared transitions" (Safari/Photos app search) and more.
+`KeyboardBackgroundView` is a visual-only utility that replicates the background of the system keyboard. It doesn't alter layout or position itself beneath the keyboard — it simply renders a view that seamlessly matches the keyboard’s appearance. By matching this color you can create the illusion that your UI and the keyboard share a single, continuous surface.
 
-:::info `KeyboardProvider` presence
-This component works independently of `KeyboardProvider`. If you're only using this component from the library, wrapping your entire app in `KeyboardProvider` is not required.
+:::tip Primary Use Case
+Use this component when you need your UI elements to appear visually connected to the keyboard - perfect for toolbars, input accessories, or panels that should feel like natural keyboard extensions.
 :::
+
+## Key Features
+
+- 🎨 **Background Color Matching**: Automatically aligns with system keyboard colors
+- 🖌️ **Visual Continuity**: Creates illusion of shared surfaces during transitions
+- ⚡ **Independent Operation**: Functions without requiring a KeyboardProvider
+
+## When to Use
+
+Use `KeyboardBackgroundView` when:
+
+- You want to **visually align your UI** with the keyboard’s background.
+- You’re implementing **shared element transitions** tied to keyboard state.
+- You need **a smooth visual bridge** between your layout and the system keyboard without interfering with keyboard positioning or layout logic.
+- You create **shared visual spaces**, ideal for scenarios like search inputs or context-sensitive panels that smoothly connect with keyboard appearance.
+- You **visually blend** your UI with the keyboard’s look.
 
 :::warning
-This component works well in most cases. However, since keyboard apps can customize their background color and there's no direct API to retrieve it, the background may not perfectly match in some situations.
+While this component works well in most scenarios, keyboard apps allow users to customize their background color. Since Android/iOS do not expose keyboard background APIs, an exact match isn't always guaranteed.
 :::
 
-## Example
+## Props
+
+`KeyboardBackgroundView` forwards all [`View`](https://reactnative.dev/docs/view#props) props, so you can treat it like any standard React Native view.
+
+## Usage
+
+### Basic
+
+```tsx
+import { KeyboardBackgroundView } from "react-native-keyboard-controller";
+
+export function KeyboardExtension() {
+  return <KeyboardBackgroundView style={{ height: 48 }} />;
+}
+```
+
+### Shared-surface transition (advanced)
 
 ```tsx
 import React from "react";
@@ -117,3 +149,8 @@ const KeyboardSharedTransitionExample = () => {
 
 export default KeyboardSharedTransitionExample;
 ```
+
+## See also
+
+- [`KeyboardStickyView`](./components/keyboard-sticky-view) – affixes content to the keyboard’s frame.
+- [`useReanimatedKeyboardAnimation`](./hooks/keyboard/use-reanimated-keyboard-animation) – drive your own animations with native‑driven progress values.
