--- a/docs/versioned_docs/version-1.17.0/api/hooks/keyboard/use-keyboard-state.mdx
+++ b/docs/versioned_docs/version-1.17.0/api/hooks/keyboard/use-keyboard-state.mdx
@@ -1,5 +1,15 @@
 ---
-keywords: [react-native-keyboard-controller, useKeyboardState, react hook]
+keywords:
+  [
+    react-native-keyboard-controller,
+    useKeyboardState,
+    useKeyboardVisible,
+    useKeyboardIsVisible,
+    useIsKeyboardVisible,
+    useKeyboardHeight,
+    useKeyboard,
+    react hook,
+  ]
 sidebar_position: 4
 ---
 
