docs: improve `useKeyboardState` SEO search

--- a/docs/docs/api/hooks/keyboard/use-keyboard-state.mdx
+++ b/docs/docs/api/hooks/keyboard/use-keyboard-state.mdx
@@ -8,6 +8,8 @@ keywords:
     useIsKeyboardVisible,
     useKeyboardHeight,
     useKeyboard,
+    isOpen,
+    isVisible,
     react hook,
   ]
 sidebar_position: 4
