--- a/docs/versioned_docs/version-1.17.0/api/hooks/keyboard/use-keyboard-state.mdx
+++ b/docs/versioned_docs/version-1.17.0/api/hooks/keyboard/use-keyboard-state.mdx
@@ -8,6 +8,8 @@ keywords:
     useIsKeyboardVisible,
     useKeyboardHeight,
     useKeyboard,
+    isOpen,
+    isVisible,
     react hook,
   ]
 sidebar_position: 4
