docs: use `keyboard accessory view` as keyword for `KeyboardStickyView`

--- a/docs/docs/api/components/keyboard-sticky-view/index.mdx
+++ b/docs/docs/api/components/keyboard-sticky-view/index.mdx
@@ -3,6 +3,7 @@ keywords:
   [
     react-native-keyboard-controller,
     KeyboardStickyView,
+    keyboard accessory view,
     keyboard sticky view,
     keyboard sticky footer,
     sticky view,
