--- a/docs/versioned_docs/version-1.14.0/api/components/keyboard-sticky-view/index.mdx
+++ b/docs/versioned_docs/version-1.14.0/api/components/keyboard-sticky-view/index.mdx
@@ -4,6 +4,7 @@ keywords:
     react-native-keyboard-controller,
     KeyboardStickyView,
     keyboard sticky view,
+    keyboard accessory view,
     keyboard sticky footer,
     sticky view,
     sticky footer,
