--- a/docs/versioned_docs/version-1.10.0/api/components/keyboard-sticky-view/index.mdx
+++ b/docs/versioned_docs/version-1.10.0/api/components/keyboard-sticky-view/index.mdx
@@ -3,6 +3,7 @@ keywords:
   [
     react-native-keyboard-controller,
     KeyboardStickyView,
+    keyboard accessory view,
     keyboard sticky view,
     keyboard sticky footer,
     sticky view,
