docs: use KeyboardAccessoryView too

--- a/docs/docs/api/components/keyboard-sticky-view/index.mdx
+++ b/docs/docs/api/components/keyboard-sticky-view/index.mdx
@@ -3,8 +3,9 @@ keywords:
   [
     react-native-keyboard-controller,
     KeyboardStickyView,
-    keyboard accessory view,
     keyboard sticky view,
+    keyboard accessory view,
+    KeyboardAccessoryView,
     keyboard sticky footer,
     sticky view,
     sticky footer,
