--- a/docs/versioned_docs/version-1.14.0/api/components/keyboard-sticky-view/index.mdx
+++ b/docs/versioned_docs/version-1.14.0/api/components/keyboard-sticky-view/index.mdx
@@ -5,6 +5,7 @@ keywords:
     KeyboardStickyView,
     keyboard sticky view,
     keyboard accessory view,
+    KeyboardAccessoryView,
     keyboard sticky footer,
     sticky view,
     sticky footer,
