--- a/docs/versioned_docs/version-1.15.0/api/components/keyboard-sticky-view/index.mdx
+++ b/docs/versioned_docs/version-1.15.0/api/components/keyboard-sticky-view/index.mdx
@@ -3,8 +3,9 @@ keywords:
   [
     react-native-keyboard-controller,
     KeyboardStickyView,
-    keyboard accessory view,
     keyboard sticky view,
+    keyboard accessory view,
+    KeyboardAccessoryView,
     keyboard sticky footer,
     sticky view,
     sticky footer,
